--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adventure Game</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="game.js" defer></script>
+    <script src="game.js" defer></script>
 </head>
 <body>
-    <h1 id="scenetext">Adventure Game</h1>
-       <div id ="options">
-        <div id="sceneimg"></div>
-    <p></p>
-    </div>
+  <h1>Adventure Game</h1>
+  <div class="sceneimg"></div>
+    <h1 id="scenetext"></h1>
+       <div id ="options"></div>
 </body>
 </html>
