--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1>Adventure Game</h1>
+  <h2>&#128527 Will You Be Able to Find The Treasure? &#128512</h2>
   <div class="sceneimg"></div>
     <h1 id="scenetext"></h1>
        <div id ="options"></div>
